--- a/business.html
+++ b/business.html
@@ -11,9 +11,9 @@
 
     <style>
         :root {
-            --brand-primary: #0044cc; /* Electric Blue from screenshot */
-            --brand-secondary: #00d4ff; /* Cyan Highlight */
-            --brand-dark: #14172B; /* Dark Blue from screenshot */
+            --brand-primary: #0044cc; 
+            --brand-secondary: #00d4ff; 
+            --brand-dark: #14172B; 
             --navbar-blue: #0044cc;
         }
 
@@ -40,22 +40,26 @@
 
         @keyframes logo-glow { 0%, 100% { box-shadow: 0 0 10px var(--brand-secondary); } 50% { box-shadow: 0 0 25px var(--brand-secondary); } }
 
-        /* --- GOOGLE TRANSLATOR ANIMATION --- */
+        /* --- CUSTOM TRANSLATOR STYLING --- */
         #google_translate_element { margin-left: 15px; }
         .goog-te-gadget-simple { 
-            background: rgba(255,255,255,0.1) !important; 
-            border: 1px solid var(--brand-secondary) !important; 
-            padding: 5px 12px !important; 
-            border-radius: 30px !important; 
-            transition: 0.3s;
+            background: rgba(255,255,255,0.15) !important; 
+            border: 2px solid var(--brand-secondary) !important; 
+            padding: 6px 15px !important; 
+            border-radius: 50px !important; 
+            transition: 0.3s all ease;
+            cursor: pointer;
         }
-        .goog-te-gadget-simple:hover { background: var(--brand-secondary) !important; transform: translateY(-2px); }
-        .goog-te-gadget-simple span { color: white !important; font-size: 12px; }
+        .goog-te-gadget-simple:hover { background: var(--brand-secondary) !important; transform: scale(1.05); }
+        .goog-te-gadget-simple span { color: white !important; font-weight: bold !important; font-size: 13px; text-transform: uppercase; }
+        .goog-te-menu-value span:nth-child(3) { display: none; } /* Hide the arrow */
+        .goog-te-banner-frame { display: none !important; } /* Hide top bar */
+        body { top: 0px !important; }
 
         /* --- HERO --- */
         .page-header {
             background: linear-gradient(rgba(20, 23, 43, 0.8), rgba(0, 68, 204, 0.7)), 
-                        url('https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?auto=format&fit=crop&q=80');
+                        url('4cedfa71c56c83defe1e7863e9e7a5bc.jpg');
             background-size: cover; background-position: center; 
             color: white; padding: 120px 0; text-align: center;
         }
@@ -75,14 +79,12 @@
         }
         .service-box:hover .icon-circle { background: var(--brand-secondary); transform: rotateY(180deg); }
 
-        /* --- WHY CHOOSE US (Screenshot Style) --- */
+        /* --- WHY CHOOSE US --- */
         .why-choose-us { background-color: var(--brand-dark); color: white; padding: 80px 0; }
         .feature-card { background: rgba(255,255,255,0.05); padding: 30px; border-radius: 15px; height: 100%; }
         .feature-card i { color: var(--brand-secondary); margin-bottom: 20px; }
 
-        /* --- FOOTER CARD --- */
         .contact-card { background: white; border-radius: 20px; padding: 40px; border-left: 6px solid var(--brand-primary); }
-
         footer { background: var(--brand-dark); color: rgba(255,255,255,0.5); padding: 30px 0; }
     </style>
 </head>
@@ -108,7 +110,9 @@
                 <ul class="navbar-nav nav-right">
                     <li class="nav-item"><a class="nav-link text-white fw-bold px-3 active" href="services.html">SERVICES</a></li>
                     <li class="nav-item"><a class="nav-link text-white fw-bold px-3" href="contact.html">CONTACT</a></li>
-                    <li class="nav-item d-flex justify-content-center"><div id="google_translate_element"></div></li>
+                    <li class="nav-item d-flex justify-content-center align-items-center">
+                        <div id="google_translate_element"></div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -210,10 +214,16 @@
 
     <script type="text/javascript">
         function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+            new google.translate.TranslateElement({
+                pageLanguage: 'en', 
+                includedLanguages: 'en,fr,es,de,zh-CN', // English, French, Spanish, German, Chinese
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false
+            }, 'google_translate_element');
         }
     </script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         ScrollReveal().reveal('.reveal-top', { distance: '40px', origin: 'top', duration: 1000 });
