--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
     <div class="top-bar">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="animate__animated animate__fadeInLeft">
-                <i class="fas fa-envelope text-info me-2"></i> courriel@atnegco.com
+                <i class="fas fa-envelope text-info me-2"></i> courriel@atom-negoce.com
             </div>
             <div id="google_translate_element" class="animate__animated animate__fadeInRight"></div>
         </div>
