--- a/contact.html
+++ b/contact.html
@@ -215,10 +215,10 @@
                             <div><p class="mb-0 small text-muted">WhatsApp Chat</p><strong>Instant Message</strong></div>
                         </div>
                     </a>
-                    <a href="mailto:contact@atom-negoce.com" class="info-link">
+                    <a href="mailto:courriel@atom-negoce.com" class="info-link">
                         <div class="info-item">
                             <div class="info-icon"><i class="fas fa-envelope"></i></div>
-                            <div><p class="mb-0 small text-muted">Email Us</p><strong>contact@atom-negoce.com</strong></div>
+                            <div><p class="mb-0 small text-muted">Email Us</p><strong>courriel@atom-negoce.com</strong></div>
                         </div>
                     </a>
                     
@@ -256,7 +256,7 @@
                                     <optgroup label="Services">
                                         <option value="Football Agency & Scouting">Football Agency & Scouting</option>
                                         <option value="Marketing & Digital Strategy">Marketing & Digital Strategy</option>
-                                        <option value="Qatar Visa / Mobility">Qatar Visa / Mobility</option>
+                                        <option value=" Travel / Mobility">Travel / Visas</option>
                                         <option value="Land & Real Estate Consulting">Land & Real Estate Consulting</option>
                                         <option value="Business Negoce">General Business Negoce</option>
                                     </optgroup>
@@ -319,7 +319,7 @@
             </div>
 
             <div class="pdf-footer-info">
-                <p style="margin-bottom: 5px;"><strong>Email:</strong> contact@atom-negoce.com &nbsp; | &nbsp; <strong>Phone:</strong> +237 694192628</p>
+                <p style="margin-bottom: 5px;"><strong>Email:</strong> courriel@atom-negoce.com &nbsp; | &nbsp; <strong>Phone:</strong> +237 652-21-29-55</p>
                 <p style="color: #999; font-size: 0.8rem; text-transform: uppercase;">Reference No: <span id="pdf-ref" style="color: var(--brand-dark); font-weight: bold;"></span> | Document Authenticated</p>
             </div>
         </div>
