--- a/explanation/agro.html
+++ b/explanation/agro.html
@@ -40,7 +40,7 @@
             color: white; text-align: center; border-bottom: 5px solid var(--brand-gold);
         }
 
-        /* --- PRODUCT CARDS --- */
+        /* MY PRODUCT CARDS  */
         .product-card {
             background: white;
             border: 1px solid rgba(197, 160, 89, 0.2);
