--- a/explanation/football.html
+++ b/explanation/football.html
@@ -116,7 +116,7 @@
                 <div class="feature-list mt-4 mb-4">
                     <p><i class="fas fa-check-circle"></i> <strong>Age Profile:</strong> 17 – 26 years old</p>
                     <p><i class="fas fa-check-circle"></i> <strong>Region:</strong> Cameroon, Togo, Côte d’Ivoire, Senegal, Ghana, Nigeria, China, USA All over the World</p>
-                    <p><i class="fas fa-check-circle"></i> <strong>Status:</strong> Professional free agents ready for trials, Scouts, Sportive-directors.</p>
+                    <p><i class="fas fa-check-circle"></i> <strong>Status:</strong> Amateurs and semi professionals players free agents.</p>
                     <p><i class="fas fa-check-circle"></i> <strong>Mindset:</strong> Disciplined, well-educated, and highly coachable</p>
                 </div>
 
