--- a/explanation/evisa.html
+++ b/explanation/evisa.html
@@ -192,7 +192,7 @@
 
     <div class="top-bar">
         <div class="container d-flex justify-content-between align-items-center">
-            <div><i class="fas fa-envelope text-info me-2"></i> courriel@atnegco.com</div>
+            <div><i class="fas fa-envelope text-info me-2"></i> courriel@atom-negoce.com</div>
             <div id="google_translate_element"></div>
         </div>
     </div>
