--- a/explanation/transportation.html
+++ b/explanation/transportation.html
@@ -233,7 +233,7 @@
                         <p class="mb-1 fw-bold">📑 Available Documents:</p>
                         <i class="fas fa-file-pdf text-danger me-1"></i> Market Study | <i class="fas fa-file-invoice-dollar text-success me-1"></i> ROI Plan
                     </div>
-                    <a href="contact.html" class="btn btn-warning btn-lg rounded-pill fw-bold w-100 mt-4 shadow">Submit Inquiry</a>
+                    <a href="../contact.html" class="btn btn-warning btn-lg rounded-pill fw-bold w-100 mt-4 shadow">Submit Inquiry</a>
                 </div>
             </div>
         </div>
