--- a/nana.html
+++ b/nana.html
@@ -41,6 +41,70 @@
                 animation: logo-bounce 3s infinite ease-in-out;
             }
         }
+        /* 1. The Main Button */
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    left: 20px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 35px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    
+    /* Apply a shake animation every 5 seconds */
+    animation: whatsapp-shake 5s infinite;
+}
+
+/* 2. The Pulse Effect (The ripple behind the button) */
+.whatsapp-float::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #25d366;
+    border-radius: 50px;
+    z-index: -1;
+    animation: whatsapp-pulse 2s infinite;
+}
+
+/* --- KEYFRAMES --- */
+
+/* Pulse Animation: Creates the expanding ring */
+@keyframes whatsapp-pulse {
+    0% {
+        transform: scale(1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1.6);
+        opacity: 0;
+    }
+}
+
+/* Shake Animation: Makes the icon tilt back and forth slightly */
+@keyframes whatsapp-shake {
+    0%, 80%, 100% { transform: rotate(0deg); }
+    85% { transform: rotate(10deg); }
+    90% { transform: rotate(-10deg); }
+    95% { transform: rotate(10deg); }
+}
+
+/* Hover Effect: Stops shake and grows slightly when mouse is over it */
+.whatsapp-float:hover {
+    background-color: #128C7E;
+    transform: scale(1.1);
+    animation: none; /* Stops shaking on hover */
+    transition: 0.3s;
+}
 
         @media (max-width: 991px) {
             .navbar-brand-center { order: -1; margin-right: auto; }
@@ -95,6 +159,9 @@
                     <img src="8769bb1d-ce11-4522-81ee-21a376e2b7f4.jpg" alt="ATOM">
                 </a>
             </div>
+            <a href="https://wa.me/237652212955" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
             <div class="collapse navbar-collapse" id="navContent">
                 <ul class="navbar-nav nav-left mt-3 mt-lg-0">
                     <li class="nav-item"><a class="nav-link text-white fw-bold px-3" href="index.html">HOME</a></li>
