--- a/services.html
+++ b/services.html
@@ -80,7 +80,70 @@
             animation: logoPulse 2s infinite;
             transition: 0.5s;
         }
+/* 1. The Main Button */
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    left: 20px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 35px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    z-index: 9999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    
+    /* Apply a shake animation every 5 seconds */
+    animation: whatsapp-shake 5s infinite;
+}
 
+/* 2. The Pulse Effect (The ripple behind the button) */
+.whatsapp-float::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #25d366;
+    border-radius: 50px;
+    z-index: -1;
+    animation: whatsapp-pulse 2s infinite;
+}
+
+/* --- KEYFRAMES --- */
+
+/* Pulse Animation: Creates the expanding ring */
+@keyframes whatsapp-pulse {
+    0% {
+        transform: scale(1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1.6);
+        opacity: 0;
+    }
+}
+
+/* Shake Animation: Makes the icon tilt back and forth slightly */
+@keyframes whatsapp-shake {
+    0%, 80%, 100% { transform: rotate(0deg); }
+    85% { transform: rotate(10deg); }
+    90% { transform: rotate(-10deg); }
+    95% { transform: rotate(10deg); }
+}
+
+/* Hover Effect: Stops shake and grows slightly when mouse is over it */
+.whatsapp-float:hover {
+    background-color: #128C7E;
+    transform: scale(1.1);
+    animation: none; /* Stops shaking on hover */
+    transition: 0.3s;
+}
         .navbar-sticky .logo-container { width: 85px; height: 85px; top: -15px; }
         .logo-container img { width: 75%; transition: 0.8s; }
         .logo-container:hover img { transform: rotate(360deg); }
@@ -171,7 +234,7 @@
 
     <div class="top-bar">
         <div class="container d-flex justify-content-between align-items-center">
-            <div><i class="fas fa-envelope text-info me-2"></i> courriel@atnegco.com</div>
+            <div><i class="fas fa-envelope text-info me-2"></i> courriel@atom-negoce.com</div>
             <div id="google_translate_element"></div>
         </div>
     </div>
@@ -184,7 +247,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
+                    
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-center align-items-center">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -235,7 +298,7 @@
             </div>
             <div class="col-md-4 reveal-bottom">
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=600&auto=format&fit=crop" alt="Business Strategy">
+                    <img src="big.jpeg" alt="Business Strategy">
                     <div class="service-card-body">
                         <h4 class="fw-bold text-brand">Strategic Consulting</h4>
                         <p class="text-muted">High-level advisory services for business restructuring, investment planning, and long-term organizational growth.</p>
@@ -244,16 +307,17 @@
             </div>
             <div class="col-md-4 reveal-bottom">
                 <div class="service-card">
-                    <img src="https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?q=80&w=600&auto=format&fit=crop" alt="Financing">
+                    <img src="money.jpeg" alt="Financing">
                     <div class="service-card-body">
                         <h4 class="fw-bold text-brand">Trade Financing</h4>
                         <p class="text-muted">Assisting partners in securing financial instruments and credit lines necessary for large-scale international trade operations.</p>
                     </div>
                 </div>
             </div>
+            <!-- serive.jpg the image i wanted to use first -->
             <div class="col-md-6 reveal-left">
                 <div class="service-card">
-                    <img src="serive.jpg" alt="Partnership">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=600&auto=format&fit=crop" alt="Partnership">
                     <div class="service-card-body">
                         <h4 class="fw-bold text-brand">Joint Venture Brokerage</h4>
                         <p class="text-muted">Identifying and vetting technical partners for large-scale government and private sector infrastructure projects.</p>
@@ -301,7 +365,9 @@
             <a href="contact.html" class="btn-pulse mt-3">Contact Us Now</a>
         </section>
     </div>
-
+<a href="https://wa.me/237652212955" class="whatsapp-float" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
     <footer class="text-center py-4 border-top">
         <div class="container">
             <p class="mb-0 small">© 2009 ATOM Negoce & Consulting. All Rights Reserved.</p>
